--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ requests==2.31.0
 scikit-learn==1.0.2
 scipy==1.7.3
 threadpoolctl==3.1.0
-urllib3==1.26.20
+urllib3==2.0.7
+transformers==4.25.1
+fastapi==0.103.2
+uvicorn==0.22.0
